# taxsplit

./: .env.dev  .gitignore  CODEX_CONTEXT.md  README.md  TODO.md  pyproject.toml
app/: main.py  pdf_report.py  tax_rates.py
app/calculator/: planner.py  rules.py  tax.py
app/data/: skattesatser-kommuner-2025.txt  skattesatser-kommuner-2026.txt
app/static/: app.js  styles.css
app/static/i18n/: en.json  sv.json
app/templates/: index.html
tests/: test_planner.py  test_tax.py  test_web.py
