[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skatteuttag"
version = "0.1.0"
description = "Swedish salary and dividend planning for owner-managed limited companies."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "reportlab>=4.4.0,<5.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.4,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*", "data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
